# BullvsBearGrantSubmission

./: .env.example  .gitignore  Cargo.toml  Makefile  README-INTEGRATION.md  README.md  env.sh  jump-start.sh  package-lock.json  package.json  tarpaulin-report.html  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: Integration.yml
node/: .env.example  index.ts  package-lock.json  package.json
node/satoshis_palace_contest/: contest.ts  contest_msg.ts  test_snip_20.ts  test_snip_20_msg.ts
node/sercet_network/: Contract.ts  Faucet.ts  SecretNetwork.ts
node/snip20/: actions.ts  test_snip_20.ts  test_snip_20_msg.ts
schema/: execute_msg.json  execute_response.json  instantiate_msg.json  invoke_msg.json  query_msg.json  query_response.json  state.json
schema/example/: instantiate_msg.json
src/: admin_execute_handlers.rs  answer.rs  constants.rs  contract.rs  contract_error.rs  error.rs  lib.rs  msg.rs  state.rs
src/bet/: bet.rs  mod.rs
src/command_handlers/: admin_execute_handlers.rs  execute_handlers.rs  invoke_handlers.rs  mod.rs  query_handlers.rs
src/contest/: actions.rs  admin_actions.rs  constants.rs  contest_info.rs  error.rs  execute_handlers.rs  mod.rs  queries.rs  query_handlers.rs  response.rs
src/cryptography/: constants.rs  cryptography.rs  error.rs  mod.rs
src/data/: bets.rs  contest_activity.rs  contest_bet_summary.rs  contest_info.rs  contests.rs  mod.rs  state.rs  user_info.rs
src/error/: bet_error.rs  contest_activity_error.rs  contest_bet_summary_error.rs  contest_error.rs  contest_info_error.rs  error.rs  mod.rs  real_contest_info_error.rs  state_error.rs
src/integrations/: mod.rs  oracle.rs  snip_20.rs  viewing_keys.rs
src/msgs/: instantiate.rs  mod.rs
src/services/: bet_service.rs  contest_activity_service.rs  contest_bet_summary_service.rs  contest_info_service.rs  contests_service.rs  mod.rs  state_service.rs  user_info_service.rs
src/tests/: bet_contest_test.rs  claim.rs  claim_rewards_test.rs  constants.rs  contest_infos.rs  contract_contest_test.rs  contract_init_test.rs  create_contest.rs  create_contest_test.rs  full_test.rs  get_contest_result.rs  get_contests.rs  get_minimum_bet.rs  get_user_bet.rs  get_users_bets.rs  minimum_bet.rs  mod.rs  query_bet_test.rs  query_contest_summary.rs  query_contest_test.rs  test_env.rs  user_info.rs  viewing_key_test.rs
src/utils/: error.rs  mod.rs  random.rs  utils.rs
src/viewingkeys/: error.rs  mod.rs  response.rs  viewing_keys.rs
ts-src/: contract.ts  dataTypes.ts  executeMsg.ts  index.ts  initMsg.ts  queryMsg.ts
(+178 files in other folders)
