[package]
name = "sp_contest"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
schema = []
testing = []

# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
lazy_static = "1.4.0"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
serde_json = "1.0"
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0", features = [
    "storage",
    "viewing-key",
    "crypto",
] }
hex = "0.4"
sha2 = "0.10"

sp-secret-toolkit = { git = "ssh://git@github.com/SatoshisPalace/SP-Secret-Toolkit.git", branch = "master", features = [
    "macros",
] }

[[bin]]
name = "schema"
required-features = ["schema"]
