[package]
name = "satoshis_palace_contests"
version = "2.0.0"
authors = ["SatoshisPalace"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
schema = []
testing = []

# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces

[dependencies]
lazy_static = "1.4.0"
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
serde_json = "1.0"
thiserror = { version = "1.0" }
cosmwasm-schema = "2.0.0"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", version = "0.10.0", features = [
    "storage",
    "viewing-key",
    "crypto",
    "snip20",
] }

sp-secret-toolkit = { git = "ssh://git@github.com/SatoshisPalace/SP-Secret-Toolkit.git", branch = "master", features = [
    "macros",
    "snip20",
    "contract",
    "master-viewing-key",
    "oracle",
] }

[[bin]]
name = "schema"
required-features = ["schema"]
